# srv.cnm.services/src/main/resources/openapi/cnm-services.yaml
@@ -250,6 +250,9 @@ components:
     ImportFileState:
       type: string
       enum: [INIT, STORED, PARSED, FAILED]
+    IidmTransformationStatus:
+      type: string
+      enum: [NOT_STARTED, STARTED, DONE, FAILED]
     ProfileFamily:
       type: string
       enum: [NCP, CGMES, Unknown]
@@ -297,6 +300,10 @@ components:
             $ref: '#/components/schemas/RdfProfileReference'
         message:
           type: string
+        iidmTransformationStatus:
+          $ref: '#/components/schemas/IidmTransformationStatus'
+        iidmTransformationCount:
+          type: integer
         uploadedAt:
           type: string
           format: date-time
